Fix double scrollbar on Windows

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -226,3 +226,9 @@ article {
 .home-link {
     margin-bottom: 1rem;
 }
+
+body.single {
+    .fullscreen--left-column {
+        overflow: initial;
+    }
+}
